--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,48 +1,35 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
-    "jest": true
+    "es2021": true
   },
+  "extends": [
+    "standard-with-typescript",
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "prettier",
+    "plugin:prettier/recommended",
+    "plugin:import/recommended",
+    "plugin:react/jsx-runtime"
+  ],
 
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly",
-    "__DEV__": true
+  "overrides": [],
+
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "ecmaVersion": "latest",
+    "sourceType": "module"
   },
-
   "plugins": [
     "react",
     "react-hooks",
-    "jsx-a11y",
     "import",
     "@typescript-eslint",
     "prettier",
     "eslint-plugin-import-helpers"
   ],
-  "extends": [
-    "plugin:import/typescript",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
-    "airbnb",
-    "airbnb-typescript",
-    "prettier",
-    "plugin:prettier/recommended",
-    "plugin:import/recommended"
-  ],
-
-  "parser": "@typescript-eslint/parser",
-
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-
   "rules": {
     "no-nested-ternary": "off",
     "jsx-a11y/no-static-element-interactions": "off",
