--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "dotenv": "^16.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
@@ -42,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier": "^2.8.8",
     "typescript": "*",
-    "vite": "^4.3.0"
+    "vite": "^4.3.0",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
