--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import-helpers"
   ],
   "rules": {
+    "@typescript-eslint/consistent-type-assertions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "no-nested-ternary": "off",
     "jsx-a11y/no-static-element-interactions": "off",
