--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yazo-pass-client",
+  "name": "victor-b-dias-temp",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/node": "^18.16.0",
     "@types/react": "^18.0.28",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
